--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/*
+  Say23 Project - prototype CSS library
+  License: none (public domain)
+*/
+
 /* #Common Type
 ================================================== */
 
