--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,8 @@ font-style: normal; }
 .say25L, .say25R,
 .say33L, .say33R,
 .say50L, .say50R,
+.say66L, .say66R,
+.say75L, .say75R,
 .say100L, .say100R {
     display: inline-block;
 }
@@ -58,6 +60,7 @@ font-style: normal; }
 .say33L,
 .say50L,
 .say66L,
+.say75L,
 .say100L {
 	float: left;
 }
@@ -67,6 +70,7 @@ font-style: normal; }
 .say33R,
 .say50R,
 .say66R,
+.say75R,
 .say100R {
 	float: right;
 }
@@ -81,6 +85,8 @@ font-style: normal; }
 .say50R {width: 50%;}
 .say66L,
 .say66R {width: 66.6666%;}
+.say75L,
+.say75R {width: 75%;}
 .say100L,
 .say100R {width: 100%;}
 
@@ -106,7 +112,7 @@ font-style: normal; }
 /* Layouts
 ================================================== */
 
-div#wrapper {
+div.container {
 	margin: 0 auto;
 	width: 960px; /*  Change to desired pixel width :)  */
 }
@@ -114,7 +120,7 @@ div#wrapper {
 header {
 }
 
-section#content-main {
+section.content-main {
 }
 
 aside {
